--- a/index.html
+++ b/index.html
@@ -41,18 +41,24 @@
                     </li>
                 </ul>
             </address>
+            <button class="burger-btn" type="button" data-menu-open>
+                <svg class="burger-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-burger"></use>
+                </svg>
+            </button>
+
         </div>
     </header>
 <main>
     <!--Section №1-->
-<section class="main-section-button section">    
+<section class="main-section-button section hidden">    
     <div class="main-container container">
         <h1  class="title-main">Effective Solutions for Your Business</h1>
         <button class="button-main" type="button">Order Service</button>
     </div>
 </section>
 <!--Section №2-->
-<section class="section-advanced section">
+<section class="section-advanced section hidden">
     <div class="advansed-container container">
         <h2 class="visually-hidden">Advanced</h2>
         <ul class="main-list">
@@ -109,7 +115,7 @@
 </section>
 
 <!--Section №3-->
-<section class="section-cards section">
+<section class="section-cards section hidden">
     <div class="cards-container container">
         <h2 class="main-list-title">Our Team</h2>
         <ul class="cards-list">
@@ -324,7 +330,7 @@
 </div>
 </section>
 <!--Section №4-->
-<section class="section-portfolio section">
+<section class="section-portfolio section hidden">
     <div class="portfolio-container container">
         <h2 class="main-list-title"> Our Portfolio</h2>
         <ul class="portfolio-list">
@@ -430,7 +436,7 @@
 
 <!--footer-->
 
-<footer class="footer">
+<footer class="footer hidden">
     <div class="footer-container container">
         <div class="footer-logo-subtitle">
             <a class="footer-logo" 
@@ -506,7 +512,7 @@
         
 
 <!--modal-->
-<div class="modal-overlay is-open">
+<div class="modal-overlay is-open hidden">
     <div class="modal">
         <button 
         type="button" 
