--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="heade ">
+    <header class="header ">
         <div class="header-container container hidden">
             <nav class="header-navigation">
                 <a class="header-logo" href="./index.html">Web<span class="header-logo-blue">Studio</span></a>
@@ -130,8 +130,8 @@ type="button">
     </div>
 </section>
 <!--Section №2-->
-<section class="section-advanced section hidden">
-    <div class="advansed-container container">
+<section class="section-advanced section ">
+    <div class="advanced-container container">
         <h2 class="visually-hidden">Advanced</h2>
         <ul class="main-list">
             <li class="advanced-text">
@@ -187,12 +187,13 @@ type="button">
 </section>
 
 <!--Section №3-->
-<section class="section-cards section hidden">
+<section class="section-cards section">
     <div class="cards-container container">
         <h2 class="main-list-title">Our Team</h2>
         <ul class="cards-list">
             <li class="main-items-cards">
-                <img  src="./images/mark.jpg"
+                <img  srcset="./images/cards-mark1x-min.jpg 1x,
+                ./images/cards-mark2x-min.jpg 2x"
                 alt="Mark Guerrero"
                 width="264"/>
                 <div class="cards-text">
@@ -207,7 +208,6 @@ type="button">
                             width="16" height="16">
                                 <use 
                                 href="./images/icons.svg#icon-instagram">
-
                                 </use>
                             </svg>
                         </a>
@@ -245,7 +245,8 @@ type="button">
                     </ul>
                 </div>
                 <li class="main-items-cards">
-                    <img  src="./images/tom.jpg"
+                    <img  srcset="./images/cards-tom1x (1)-min.jpg 1x,
+                    ./images/cards-tom2x-min.jpg 2x"
                     alt="Tom Ford"
                     width="264"/>
                     <div class="cards-text">
@@ -296,7 +297,8 @@ type="button">
                 </div>
             </li>
             <li class="main-items-cards">
-                <img  src="./images/camila.jpg"
+                <img  srcset="./images/cards-camila1x (1)-min.jpg 1x,
+                ./images/cards-camila2x-min.jpg 2x"
                 alt="Camila Garcia"
                 width="264"/>
                 <div class="cards-text">
@@ -350,7 +352,8 @@ type="button">
         </li>
         <li class="main-items-cards">
             <img  
-            src="./images/daniel.jpg"
+            srcset="./images/cards-daniel1x-min.jpg 1x,
+            ./images/cards-daniel2x-min.jpg 2x"
             alt="Daniel Wilson"
             width="264"/>
             <div class="cards-text">
