--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ type="button">
         <h2 class="main-list-title">Our Team</h2>
         <ul class="cards-list">
             <li class="main-items-cards">
-                <img  srcset="./images/cards-mark1x-min.jpg 1x,
+                <img  class="img-cards" srcset="./images/cards-mark1x-min.jpg 1x,
                 ./images/cards-mark2x-min.jpg 2x"
                 alt="Mark Guerrero"
                 width="264"/>
@@ -405,7 +405,7 @@ type="button">
 </div>
 </section>
 <!--Section №4-->
-<section class="section-portfolio section hidden">
+<section class="section-portfolio section hidden ">
     <div class="portfolio-container container">
         <h2 class="main-list-title"> Our Portfolio</h2>
         <ul class="portfolio-list">
@@ -511,7 +511,7 @@ type="button">
 
 <!--footer-->
 
-<footer class="footer hidden">
+<footer class="footer">
     <div class="footer-container container">
         <div class="footer-logo-subtitle">
             <a class="footer-logo" 
