--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@ type="button">
     </header>
 <main>
     <!--Section №1-->
-<section class="main-section-button section">    
+<section class="main-section-button section ">    
     <div class="main-container container">
         <h1  class="title-main">Effective Solutions for Your Business</h1>
         <button class="button-main" type="button">Order Service</button>
     </div>
 </section>
 <!--Section №2-->
-<section class="section-advanced section ">
+<section class="section-advanced section  ">
     <div class="advanced-container container">
         <h2 class="visually-hidden">Advanced</h2>
         <ul class="main-list">
@@ -187,7 +187,7 @@ type="button">
 </section>
 
 <!--Section №3-->
-<section class="section-cards section">
+<section class="section-cards section ">
     <div class="cards-container container">
         <h2 class="main-list-title">Our Team</h2>
         <ul class="cards-list">
@@ -405,7 +405,7 @@ type="button">
 </div>
 </section>
 <!--Section №4-->
-<section class="section-portfolio section hidden ">
+<section class="section-portfolio section ">
     <div class="portfolio-container container">
         <h2 class="main-list-title"> Our Portfolio</h2>
         <ul class="portfolio-list">
@@ -513,6 +513,7 @@ type="button">
 
 <footer class="footer">
     <div class="footer-container container">
+        <div class="web-social">
         <div class="footer-logo-subtitle">
             <a class="footer-logo" 
             href="./index.html">Web<span class="footer-logo-blue">Studio</span></a>
@@ -564,7 +565,7 @@ type="button">
             </li>
         </ul>
     </div>
-
+        </div>
 <div class="footer-subscribe">
     <p class="subscribe-title">Subscribe</p>
     <form class="form-sbs" 
@@ -574,6 +575,7 @@ type="button">
             <input class="subscribe-input" type="email" 
             name="email" placeholder="E-mail"/>
         </label>
+   
         <button class="btn-subscribe" type="submit">Subscribe
             <svg class="subscribe-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send">
@@ -587,7 +589,7 @@ type="button">
         
 
 <!--modal-->
-<div class="modal-overlay is-open hidden">
+<div class="modal-overlay is-open">
     <div class="modal">
         <button 
         type="button" 
