--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </svg>
             </button>
         </div>
-<div class="mobile-menu is-open hidden">
+<div class="mobile-menu is-open">
     <div class="menu-container container">
 <button class="close-menu-button close-button"
 type="button">
@@ -71,10 +71,10 @@ type="button">
 <address class="mobile-contacts">
     <ul class="mobile-contacts">
         <li>
-            <a class="mobile-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="mobile-contacts-link current" href="tel:+110001111111">+11(000)111-11-11</a>
         </li>
         <li>
-            <a class="mobile-contacts-link current" href="tel:+110001111111">+11(000)111-11-11</a>
+            <a class="mobile-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
     </ul>
 </address>
